[package]
name = "winey"
version = "0.1.0"
edition = "2021"
authors = ["Lattexshz"]
license = "MIT"
readme = "../README.md"
description = "Simple windowing library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raw-window-handle = "0.5.2"

[target."cfg(windows)".dependencies.windows-sys]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dwm",
    "Win32_UI_Controls"
]

[target."cfg(unix)".dependencies.safex]
version = "0.0.5"
features = [
    "xlib"
]
